Added explanation for Encoding wrt Babai

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -89,6 +89,7 @@
 \newcommand*{\decompring}{\decomp_{\eta,\limbs}}
 \newcommand*{\projmod}[1]{\proj_{#1}}
 \newcommand*{\decompmod}[1]{\decomp_{#1}}
+\newcommand*{\deltav}{\vec{\delta}_v}
 
 \newcommand{\hashajtai}{h_\mathrm{Ajtai}}
 \newcommand{\limbs}{\kappa}
@@ -122,10 +123,14 @@
 
 \newcommand*{\latring}{\Lambda_\ring}
 \newcommand*{\latmodular}{\Lambda_{\ring,q}}
+\newcommand*{\latgeneral}{\Lambda}
+\newcommand*{\dunion}{\cup}
 
 \newcommand*{\kernelbasis}{\mathcal{B}}
 \newcommand*{\subrange}[1]{<#1}
 % \newcommand*{\concat}{\Vert}
+\newcommand*{\coset}{\mathcal{C}}
+\newcommand*{\tref}{\vec{t}_{\mathrm{ref}}}
 
 \newcommand*{\latencode}{\ensuremath{\mathsf{Encode}^{\textup{B}}_{\eta,q}}}
 \newcommand*{\latdecode}{\ensuremath{\mathsf{Decode}^{\textup{B}}_{\eta,q}}}
